deps/chakrashim/core/test/Function/deferredBadContinue.baseline
SyntaxError: Can't have 'continue' outside of loop
	at code (deferredBadContinue.js:14:28)
